welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: type mismatch;
 found   : String
 required: Int
    var mes: Int= litMessage()
                            ^